update basic config to have the mongoose connection and sample api
