# server/routes.js
@@ -1,5 +1,6 @@
-import examplesRouter from './api/controllers/examples/router';
-
+import busRouter from './api/controllers/bus/router';
+import ticketRouter from './api/controllers/ticket/router';
 export default function routes(app) {
-  app.use('/api/v1/examples', examplesRouter);
+  app.use('/api/v1/bus', busRouter);
+  app.use('/api/v1/ticket', ticketRouter);
 }
